src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://rsms.me/inter/inter.css');
@import url('https://use.typekit.net/cyw3eir.css');

:root {
  /* DRACULA COLOR PALETTE */
  --pink: rgb(255, 121, 198);
  --green: rgb(80, 250, 123);
  --purple: rgb(189, 147, 249);
  --background: rgb(40, 42, 54);
  --current-line: rgb(68, 71, 90);
  --foreground: rgb(248, 248, 242);
  --comment: rgb(98, 114, 164);
  --cyan: rgb(139, 233, 253);
  --oragne: rgb(255, 184, 108);
  --red: rgb(255, 85, 85);
  --yellow: rgb(241, 250, 140);

  --white: rgb(245, 246, 249);
  --grey: #2b2b2b;
  --dark-purple: rgb(109, 23, 232);

  /* LIGHT THEME PALETTE   */
  --light-grey: rgb(107,114,128);
  --elation: rgba(223, 220, 229, 1.00);
  --nugget: rgba(219, 176, 74, 1.00);
  --celestial: rgba(151, 179, 208, 1.00);
  

  /* APP THEME */
  --primary-color: var(--dark-purple);
  --secondary-color: var(--grey);
  --font-color: var(--grey);
  --bg-color: var(--white);
  --heading-color: var(--dark-purple);
  --highlight-color: var(--dark-purple);
  --hr-color: var(--dark-purple);
  --writing-body: var(--grey);
  --uses-secondary-color: var(--font-color);
  --code: var(--dark-purple);
  --link: var(--dark-purple);
  --underline: var(--dark-purple);
}

[data-theme='dark'] {
  --primary-color: var(--purple);
  --secondary-color: var(--green);
  --font-color: var(--foreground);
  --bg-color: var(--background);
  --heading-color: var(--pink);
  --highlight-color: var(--green);
  --hr-color: var(--comment);
  --writing-body: var(--foreground);

  --code: var(--yellow);
  --link: var(--purple);
  --underline: var(--pink);
}

::-moz-selection {
  background: var(--highlight-color);
}
::selection {
  background: var(--highlight-color);
}

html {
  font-family: 'Inter', sans-serif;
}

body {
  background-color: var(--bg-color);
  color: var(--font-color);
}

* {
  transition: background 0.2s linear;
}

/* nav logo */
.top-menu ul li.logo a {
  font-size: 20px;
  margin: -5px 0 0;
  display: inline-block;
  vertical-align: middle;
}

.top-menu ul li.logo a:hover {
  background: none;
  color: var(--link);
  opacity: 0.3;
}

.top-menu ul li a {
  color: var(--font-color);
  font-family: ibm-plex-mono, Monaco, 'Lucida Console';
  padding: 0 0 3px;
  text-decoration: none;
  font-size: 16px;
  text-transform: uppercase;
  padding: 3px 10px 5px;
  border-radius: 4px;
}

.top-menu ul li a:hover {
  background: var(--link);
  color: var(--bg-color);
}

.theme-switch-button {
  border: none;
  background: none;
  cursor: pointer;
  cursor: hand;
  color: var(--font-color);
  outline: 0;
}


.theme-switch-button svg {
  fill: var(--font-color);
}

.unused {
  background: var(--highlight-color);
  border-radius: 50%;
  height: 10px;
  width: 10px;
  display: inline-block;

  box-shadow: 0 0 0 0 var(--highlight-color);
  transform: scale(1.2);
  animation: pulse 2s infinite;
  margin: -7px 15px 0 0;
  vertical-align: middle;
}

.theme-switch-button svg:hover { 
  fill: var(--link);
  stroke: var(--link);
  /* animation: themePulse 2s infinite; */
  
}

/* AMP */
.amp {
  font-family: Baskerville, 'Goudy Old Style', Palatino, 'Book Antiqua', serif;
  font-style: italic;
  font-weight: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--heading-color);
}

.writing-row span {
  display: inline-flex;
  align-items: center;
}

.writing-row a {
  text-decoration: none;
  transition: all 0.2s;
  color: var(--font-color);  
}

.writing-row a:hover {
  color: var(--link);  
  /* opacity: 0.2; */
}

.writing-row .writing-date {
  /* padding-right: 20px; */
  font-size: 14px;
  color: var(--secondary-color);
}

.writing-row .writing-title {
  font-weight: 600;
  font-size: 20px;  
}

.about-h1 {
  margin-bottom: 60px;
}

.writing-container h1,
.writing-container h2,
.writing-container h3,
.writing-container h4,
.writing-container h5,
.writing-container h6 {
  letter-spacing: -1px;
  @apply pb-5;
  @apply font-bold;
}

.writing-container h1, h2, h3, h4, h5, h6 {
  @apply text-2xl;
}


.writing-container img {
  width: 100%;
}

.writing-container ul {
  margin: 0;
  padding: 0 0 30px 20px;
  list-style: circle;
}

.writing-container ul li {
  padding: 4px 0;
  line-height: 1.8em;
  font-size: 20px;
  color: var(--writing-body);
}

.writing-container blockquote {
  border-left: 5px var(--highlight-color) solid;
  font-style: italic;
  margin: 0;
  padding: 0px 30px;
}

.writing-container p {
  line-height: 1.8em;
  margin-bottom: 40px;
  font-size: 20px;
  color: var(--writing-body);
}

.writing-container *:not(pre) > code {
  font-family: ibm-plex-mono, Monaco, 'Lucida Console';
  background: var(--code);
  color: var(--bg-color);
  padding: 2px 7px 5px;
  border-radius: 4px;
  line-height: 1em;
  font-size: 16px;
  display: inline-flex;
}

hr {
  border: none;
  border-top: 1px var(--hr-color) solid;
  margin: 45px 0;
}

.writing-container a {
  color: var(--link);
  text-decoration: none;
  border-bottom: 2px var(--link) dashed;
}

.back-button {
  color: var(--font-color);
  text-decoration: none;
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: -1px;
  border: 2px var(--font-color) solid;
  display: inline-block;
  padding: 10px 20px;
  border-radius: 4px;
  font-weight: 500;
}

.back-button:hover {
  border-color: var(--primary-color);
  color: var(--primary-color);
}

.copy-to-clipboard {
  text-align: right;
  padding-right: 15px;
  margin: -10px 0 25px;
}

.copy-to-clipboard button {
  background: none;
  border: none; 
  text-transform: uppercase;
  color: var(--secondary-color);
  cursor: pointer;
  cursor: hand;
  outline: 0;
  padding: 0;
}

.copy-to-clipboard button:hover {
  color: var(--heading-color);
}

footer {
  text-align: center;
  font-size: 16px;
  /* padding: 100px 0; */
  color: var(--secondary-color);
}

.author {
  margin-bottom: 40px;
}

.author a {
  color: var(--link);
  text-decoration: none;
  border-bottom: 1px var(--link) dashed;
}

.author img {
  border-radius: 250px;
  margin-right: 10px;
  border: 2px var(--link) solid;
  padding: 3px;
}

.author * {
  font-size: 20px;
}

.twitter-follow {
  border: 3px var(--highlight-color) dashed;
  padding: 30px;
  border-radius: 8px;
  font-size: 18px;
  line-height: 1.9em;
}

.uses-intro,
.about-intro {
  font-size: 20px;
  line-height: 1.8em;
  color: var(--font-color);
}

.uses-intro a,
.about-intro a {
  color: var(--link);
  text-decoration: none;
  border-bottom: 1px var(--link) dashed;
}

.about-intro h3 {
  font-weight: 600;
}

.about-avatar {
  width: 50%;
  border-radius: 100%;
  position: fixed;
  bottom: -20vh;
  left: -20vh;
  z-index: -1;
  opacity: 0.07;
}

.uses-list {
  list-style: none;
  margin: 40px 0 0px;
  padding: 0;
  font-family: ibm-plex-mono, Monaco, 'Lucida Console';
  font-size: 16px;
}

.uses-list li.head {
  font-weight: 600;
  font-size: 32px;
  margin-bottom: 20px;
  box-shadow: inset 0 -12px 0 var(--underline);
  display: inline-block;
}

.uses-list li:not(.head) {
  padding: 15px 0;
}

.uses-list li:not(.head):before {  
  color: var(--uses-secondary-color);
  padding-right: 10px;
}

.uses-list li:not(.head) {
  color: var(--uses-secondary-color);
}

.uses-list li:not(.head) a {
  color: var(--link);
  font-weight: 600;
  text-decoration: none;
  margin-right: 15px;
  padding-bottom: 3px;
}

.uses-list li:not(.head) a:hover {
  border-bottom: 1px var(--link) dashed;
}

[data-icon='Next.js'] svg,
[data-icon='Zeit'] svg,
[data-icon='CoffeeScript'] svg {
  fill: var(--heading-color);
}

.stack-name {
  font-family: ibm-plex-mono, Monaco, 'Lucida Console';
  font-size: 16px;
  color: var(--font-color);
}

strong {
  color: var(--heading-color);
}

/* Override scroll progress */
.writing-progress > div {
  background: var(--highlight-color) !important;
}

.pulse {
  background: var(--highlight-color);
  border-radius: 50%;
  height: 10px;
  width: 10px;
  display: inline-block;

  box-shadow: 0 0 0 0 var(--highlight-color);
  transform: scale(1.2);
  animation: pulse 2s infinite;  
  vertical-align: sub;
}

@keyframes pulse {
  0% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 var(--highlight-color);
  }

  70% {
    transform: scale(1);
    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
  }

  100% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }
}

@keyframes themePulse {
  0% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 var(--link);
  }

  70% {
    transform: scale(1);
    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
  }

  100% {
    transform: scale(0.95);
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
  }
}

@media only screen and (max-width: 960px) {
  .writing-row .writing-date {
    text-align: left;
    /* padding: 10px 0; */
  }

  .uses-list li:not(.head) span {
    display: block;
    margin-top: 10px;
  }

  .uses-list li:not(.head) {
    padding-bottom: 25px;
  }

  .stack-name {
    font-size: 14px;
  }

  .text-transition {
    display: block !important;
  }

  .about-avatar {
    width: 120%;
  }

  .writing-row a {
    margin-top: 0;
  }

  .logo {
    display: none;
  }
}

